--- a/SortingAlgorithms.ConsoleApp/SortingAlgorithms.ConsoleApp.csproj
+++ b/SortingAlgorithms.ConsoleApp/SortingAlgorithms.ConsoleApp.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{55C700B7-8B89-4EA3-A72F-F6EBE212A330}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SortingAlgorithms</RootNamespace>
-    <AssemblyName>SortingAlgorithms</AssemblyName>
+    <ProjectGuid>{159EEFB1-1CC3-4B18-9AD7-DE02B5E7A60D}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>SortingAlgorithms.ConsoleApp</RootNamespace>
+    <AssemblyName>SortingAlgorithms.ConsoleApp</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,13 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Sorters\BubbleSorter.cs" />
-    <Compile Include="ComparableExtensions.cs" />
-    <Compile Include="ISorter.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sorters\MergeSorter.cs" />
-    <Compile Include="Sorters\QuickSorter.cs" />
-    <Compile Include="Sorters\SelectionSorter.cs" />
+    <Compile Include="SortFileTest.cs" />
+    <Compile Include="SortNumbersTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SortingAlgorithms\SortingAlgorithms.csproj">
+      <Project>{55c700b7-8b89-4ea3-a72f-f6ebe212a330}</Project>
+      <Name>SortingAlgorithms</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
