--- a/SortingAlgorithms.Tests/SortingAlgorithms.Tests.csproj
+++ b/SortingAlgorithms.Tests/SortingAlgorithms.Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MergeSorterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickSorterTests.cs" />
+    <Compile Include="RadixSorterTests.cs" />
     <Compile Include="SelectionSorterTests.cs" />
   </ItemGroup>
   <ItemGroup>
