--- a/SortingAlgorithms/SortingAlgorithms.csproj
+++ b/SortingAlgorithms/SortingAlgorithms.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sorters\MergeSorter.cs" />
     <Compile Include="Sorters\QuickSorter.cs" />
+    <Compile Include="Sorters\RadixSorter.cs" />
     <Compile Include="Sorters\SelectionSorter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
