--- a/SortingAlgorithms.Tests/SortingAlgorithms.Tests.csproj
+++ b/SortingAlgorithms.Tests/SortingAlgorithms.Tests.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BubbleSorterTests.cs" />
+    <Compile Include="InsertionSorterTests.cs" />
     <Compile Include="MergeSorterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickSorterTests.cs" />
