--- a/SortingAlgorithms/SortingAlgorithms.csproj
+++ b/SortingAlgorithms/SortingAlgorithms.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ComparableExtensions.cs" />
     <Compile Include="ISorter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sorters\CountingSorter.cs" />
     <Compile Include="Sorters\InsertionSorter.cs" />
     <Compile Include="Sorters\MergeSorter.cs" />
     <Compile Include="Sorters\QuickSorter.cs" />
